# origin

./: .gitignore  manage.py  pyproject.toml  pytest.ini
insurance/: services.py  views.py
origin/: asgi.py  settings.py  urls.py  wsgi.py
tests/insurance/: test_risk_calculator.py  test_risk_profile_view_set.py
tests/insurance/risk_profile_calculator/: conftest.py  test_calculate_base_score.py  test_calculate_score.py  test_classify_score.py  test_consider_dependents.py  test_consider_house_mortage.py  test_consider_income.py  test_consider_marital_status.py  test_consider_senior_age.py  test_consider_vehicle.py
