[tool.poetry]
name = "origin"
version = "0.1.0"
description = ""
authors = ["Felipe Rodrigues <felipe@crafters.cc>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.2"
django-rest-framework = "^0.1.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
black = {version = "^19.10b0", allow-prereleases = true}
pytest = "^5.3.4"
pytest-cov = "^2.8.1"
pytest-django = "^3.8.0"
pytest-xdist = "^1.31.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
